@@ -4,7 +4,8 @@ History of this buildout
 5.0.10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Disallow adding anything directly to the existing Digibib.
+  [maurits]
 
 
 5.0.9 (2013-05-16)
